Worker threads block when idle; task assignment works correctly