@@ -1,8 +1,10 @@
 package cs455.scaling.server;
 
+import java.util.ArrayList;
 import java.util.LinkedList;
 
 import cs455.scaling.WorkerThread;
+import cs455.scaling.server.tasks.ComputeHashTask;
 import cs455.scaling.server.tasks.Task;
 
 public class ThreadPoolManager implements Runnable {
@@ -47,8 +49,8 @@ public class ThreadPoolManager implements Runnable {
 	private WorkerThread retrieveIdleThread() {
 		if (idleThreads.size() > 0) {
 			synchronized (idleThreads) {
-				WorkerThread idleThread = idleThreads.removeFirst();
-				if (debug) System.out.println(" Idle thread retrieved.");
+				WorkerThread idleThread = idleThreads.remove(0);
+				if (debug) System.out.println(" Idle thread " + idleThread.getId() + " retrieved.");
 				return idleThread;
 			}
 		}
@@ -65,12 +67,17 @@ public class ThreadPoolManager implements Runnable {
 		
 		// Begin monitoring for idle threads
 		if (debug) System.out.println(" Thread pool manager now monitoring for idle worker threads and pending tasks...");
+		ComputeHashTask cht = new ComputeHashTask();
+		taskQueue.add(cht);
 		while (!shutDown) {
 			if ((idleThreads.size() > 0) && (taskQueue.size() > 0)) {
 				WorkerThread idleThread = retrieveIdleThread();
-				if (debug) System.out.println(" Matching retrieved idle thread with a pending task.");
-				idleThread.assignTask(taskQueue.removeFirst());
-				idleThread.notify();
+				synchronized(idleThread) {
+					if (debug) System.out.println(" Matching retrieved idle thread with a pending task.");
+					idleThread.notify();
+					idleThread.assignTask(taskQueue.removeFirst());
+					if (debug) System.out.println(" Thread and task matched. Task queue size is now: " + taskQueue.size());
+				}
 			}
 		}
 	}
